# brain

./: .dockerignore  .gitignore  CONNECT.md  Caddyfile.example  Dockerfile  EDITION  Install.bat  LICENSE  README.md  Start.bat  Stop.bat  brain.bat  config.docker.json  config.example.json  docker-compose.yml  launch.cmd  make-shortcut.cmd  make-shortcut.ps1  requirements.txt  start.cmd  start.ps1  stop.cmd  stop.ps1
client/: BrainClient-linux.spec  BrainClient.spec  README-mac.txt  README.md  pyproject.toml  run_brain_client.py
client/brain_client/: __init__.py  __main__.py  agents.py  bootstrap.py  config.py  deploy.py  status.py  system_integration.py  tray.py
dashboard/: app.py  auth.py  mcp_rag.py  mcp_runner.py  tray.py
dashboard/static/: app.js  i18n.js  index.html  style.css
data/: api-keys.example.json  mcp-tokens.example.json
data/vault/: USER.example.md
docs/: HOMELAB-PROJECTS.md  LINKEDIN.md  PROJECT.md  devto-self-hosted-second-brain-mcp.md
linux/: README.md  bootstrap.sh  docker-mcp-multi-server.json  install.sh  locale.sh  mcp-multi-server.json.template
pipeline/: agents.py  codeindex.py  dedupe.py  distill.py  make_icon.py  mcp_auth_proxy.py  note_quality.py  paths.py  rag.py  redistill.py  regenerate_setup.py  scheduler.py  skills.py
scripts/: capture_screenshots.py
skills/: bug-recon.md  cv-update.md  dedupe-vault.md  inbox-process.md  mikrotik-config.md  report-draft.md  scope-analyzer.md  session-handoff.md  trading-digest.md  update-user-profile.md
windows/: Locale.ps1  install.ps1  start.ps1  stop.ps1
(+9 files in other folders)
